infra/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-app-georgelee
  labels:
    app: capstone-app-georgelee
spec:
  selector:
    matchLabels:
      app: capstone-app-georgelee
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  progressDeadlineSeconds: 1200
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: capstone-app-georgelee
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: udacity
          image: thonglevan131/uda-aws-devops-capstone:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              scheme: HTTP
              port: 3000
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 2
            timeoutSeconds: 1

---
apiVersion: v1
kind: Service
metadata:
  name: capstone-app-georgelee
spec:
  type: LoadBalancer
  selector:
    app: capstone-app-georgelee
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstone-app-georgelee
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "ingress-nginx"
    #Limit app to my personal IP
    #nginx.ingress.kubernetes.io/whitelist-source-range: "IP/32"
spec:
  rules:
  - host: frontend.vanthonglee.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: capstone-app-georgelee
            port:
              number: 80
